# robotics

./: .gitignore  .travis.yml  README.md  sorter.py
bot/: Main.hs  bot.cabal  stack.yaml
bot/src/: Bot.hs
bot/src/Bot/: Logger.hs
docs/: lab3.tex
hs-robotics/: hs-robotics.cabal  stack.yaml
hs-robotics/src/: Bot.hs
hs-robotics/src/Bot/: Logger.hs  Logic.hs
lab3/: lab3.tex  sorter.cabal  sorter.hs  stack.yaml
lab4/: lab4.cabal
lab5/: Main.hs  lab5.cabal  stack.yaml
nxc-robotics/: .gitignore  Devin - wall-follower.nxc  dwall-follower.nxc  line-follower.nxc  rescuer.nxc  tmp-rescuer.nxc  wall-follower.nxc
py-robotics/: linefollow2.py  sorter.py
sorter/: lab3.tex  nxt-sorter.cabal  sorter.hs
