name:                   bot
version:                0.1.0.0
synopsis:               Source code for a certain NXT robot
description:            Please see README.md
homepage:               https://github.com/oldmanmike/bot
bug-reports:            https://github.com/oldmanmike/bot/issues
license:                BSD3
license-file:           LICENSE
author:                 Michael Carpenter
maintainer:             Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:              Copyright (C) 2016 Michael Carpenter
category:               Robotics
build-type:             Simple
extra-source-files:     LICENSE
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  ghc-options:          -Wall -O2
  exposed-modules:      Bot
                        Bot.Logger
  build-depends:        base,
                        fast-logger,
                        old-locale,
                        stm,
                        thyme,
                        transformers
  default-language:     Haskell2010


executable bot
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base,
                        NXT,
                        transformers
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/bot
