name:                sorter
version:             0.0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/oldmanmike/sorter#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Carpenter
maintainer:          Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:           Copyright (C) 2016 Michael Carpenter
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sorter
  main-is:              sorter.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base,
                        NXT,
                        time
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/sorter
