name:                   lab4
version:                0.0.0.1
synopsis:               Initial project template from stack
description:            Please see README.md
homepage:               https://github.com/oldmanmike/robotics/lab4
license:                BSD3
license-file:           LICENSE
author:                 Michael Carpenter
maintainer:             Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:              Copyright (C) 2016 Michael Carpenter
category:               Web
build-type:             Simple
cabal-version:          >=1.10

executable compass
  main-is:              compass.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base,
                        NXT
  default-language:     Haskell2010
