name:                nxt-sorter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/nxt-sorter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sorter
  main-is:              sorter.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base,
                        NXT,
                        time
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/nxt-sorter
